Revert "Don't add site_description yet"
This reverts commit 3324faa1a1c38851a8c9947b7ea764d1e6470c0f.

--- a/mkdocs.yml.jinja
+++ b/mkdocs.yml.jinja
@@ -1,4 +1,7 @@
 site_name: "{{ project_name }}"
+{% if project_description %}
+site_description: "{{ project_description }}"
+{% endif %}
 site_url: "https://{{ repository_name.split("/")[0] }}.github.io/{{ repository_name.split("/")[1] }}"
 repo_url: "https://github.com/{{ repository_name }}"
 edit_uri: blob/master/docs/
