--- a/README.md.jinja
+++ b/README.md.jinja
@@ -3,5 +3,5 @@
 **{{ project_description }}**
 
 [![PyPI](https://img.shields.io/pypi/v/{{ python_distribution_name }})](https://pypi.org/project/{{ python_distribution_name }}/)
-[![GitHub](https://img.shields.io/github/license/{{ repository_name }})](https://github.com/{{ repository_name }}/blob/master/LICENSE.md)
-[![GitHub Workflow Status](https://img.shields.io/github/workflow/status/{{ repository_name }}/CI)](https://github.com/{{ repository_name }}/actions?query=event%3Apush+branch%3Amaster)
+[![License](https://img.shields.io/github/license/{{ repository_name }})](https://github.com/{{ repository_name }}/blob/master/LICENSE.md)
+[![GitHub Workflow Status](https://img.shields.io/github/actions/workflow/status/{{ repository_name }}/ci.yml.svg)](https://github.com/{{ repository_name }}/actions?query=event%3Apush+branch%3Amaster)
