--- a/pyproject.toml.jinja
+++ b/pyproject.toml.jinja
@@ -1,46 +1,149 @@
-[tool.poetry]
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[project]
 name = "{{ python_distribution_name }}"
-version = "0.1.0"
 description = "{{ project_description }}"
-authors = ["Oleh Prypin <oleh@pryp.in>"]
-license = "MIT"
-repository = "https://github.com/{{ repository_name }}"
-keywords = []
 readme = "README.md"
+license = "MIT"
+keywords = []
+authors = [
+    {name = "Oleh Prypin", email = "oleh@pryp.in"},
+]
+classifiers = [
+    "Development Status :: 3 - Alpha",
+    "License :: OSI Approved :: MIT License",
+    "Operating System :: OS Independent",
+    "Programming Language :: Python",
+    "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Typing :: Typed",
+]
+dynamic = ["version"]
+requires-python = ">=3.8"
+dependencies = [
+]
 
-[tool.poetry.dependencies]
-python = "^{{ min_python_version }}"
+[project.urls]
+{%- if mkdocs %}
+Documentation = "https://{{ repository_name.split("/")[0] }}.github.io/{{ repository_name.split("/")[1] }}/"
+{%- else %}
+Documentation = "https://github.com/{{ repository_name }}#readme"
+{%- endif %}
+Source = "https://github.com/{{ repository_name }}"
+Issues = "https://github.com/{{ repository_name }}/issues"
+History = "https://github.com/{{ repository_name }}/releases"
 
-[tool.poetry.dev-dependencies]
-{% if pytest %}
-pytest = "^6.1.2"
-{% endif %}
-black = "^20.8b1"
-isort = "^5.6.4"
-autoflake = "^1.4"
-{% if pytype %}
-pytype = {version = "^2021.04.15", markers = "python_version>='3.6' and python_version<'3.10' and sys_platform!='win32'"}  # Skip on Windows
-{% endif %}
+[tool.hatch.version]
+path = "{{ python_source_path }}/__init__.py"
 
-[tool.black]
+[tool.hatch.build.targets.sdist]
+include = ["/{{ python_source_path.split('/')[0] }}"{% if pytest %}, "/tests"{% endif %}]
+{%- if mkdocs %}
+
+[tool.hatch.env]
+requires = [
+    "hatch-mkdocs",
+    "hatch-pip-compile",
+]
+{%- endif %}
+{%- if python_source_path != project_name.lower().replace('-', '_').replace(' ', '_') %}
+
+[tool.hatch.build.targets.wheel]
+packages = ["{{ python_source_path.split('/')[0] }}"]
+{%- endif %}
+
+[tool.hatch.envs.default.scripts]
+all = [
+    "hatch run style:fix",
+    "hatch run types:check",
+{%- if pytest or script_test %}
+    "hatch run test:test",
+{%- endif %}
+]
+{%- if pytest or script_test %}
+{{ '' }}
+{%- if pytest %}
+[tool.hatch.envs.test]
+dependencies = [
+    "pytest",
+]
+{%- endif %}
+[tool.hatch.envs.test.scripts]
+test = [
+{%- if pytest %}
+    "pytest -q",
+{%- endif %}
+{%- if script_test %}
+    "bash .tools/test.sh",
+{%- endif %}
+]
+{%- endif %}
+
+[tool.hatch.envs.types]
+dependencies = [
+    "mypy",
+]
+[tool.hatch.envs.types.scripts]
+check = [
+    "mypy {{ python_source_path.split('/')[0] }}"
+]
+
+[tool.hatch.envs.style]
+skip-install = true
+dependencies = [
+    "ruff",
+]
+[tool.hatch.envs.style.scripts]
+fix = [
+    "ruff check --fix {{ python_source_path.split('/')[0] }}{% if pytest %} tests{% endif %}",
+    "format",
+]
+format = [
+    "ruff format -q {{ python_source_path.split('/')[0] }}{% if pytest %} tests{% endif %}",
+]
+{%- if mkdocs %}
+
+[tool.hatch.env.collectors.mkdocs.docs]
+[tool.hatch.envs.docs]
+type = "pip-compile"
+pip-compile-hashes = false
+{%- if mkdocs_install_self %}
+detached = false
+{%- endif %}
+{%- endif %}
+
+[tool.ruff]
 line-length = 100
+select = [
+    "I",
+    "F", "W", "E", "UP", "YTT", "C4", "DTZ", "FA", "ISC", "PIE", "T20", "RSE", "TCH",
+    "B002", "B003", "B005", "B007", "B009", "B012", "B013", "B014", "B015", "B018", "B020", "B021", "B023", "B026", "B033", "B034", "B905",
+    "COM818",
+    "PERF101",
+    "PGH002", "PGH004", "PGH005",
+    "FLY002",
+    "PLC", "PLE", "PLR0124", "PLR0133", "PLR0206", "PLR0402", "PLR1701", "PLR1722", "PLW0120", "PLW0127", "PLW0129", "PLW0131", "PLW0406", "PLW0602", "PLW0603", "PLW0711",
+    "RUF001", "RUF005", "RUF007", "RUF010", "RUF013", "RUF100", "RUF200",
+    "SIM101", "SIM107", "SIM201", "SIM202", "SIM208", "SIM210", "SIM211", "SIM300", "SIM401", "SIM910",
+]
+ignore = ["E501", "E731"]
+[tool.ruff.flake8-comprehensions]
+allow-dict-calls-with-keyword-arguments = true
 
-[tool.isort]
-line_length = 100
-multi_line_output = 3
-include_trailing_comma = true
-force_grid_wrap = 0
-use_parentheses = true
-ensure_newline_before_comments = true
+[tool.mypy]
+warn_unreachable = true
+allow_redefinition = true
+{%- if pytest %}
 
-{% if pytest %}
 [tool.pytest.ini_options]
 addopts = "--tb=native"
 enable_assertion_pass_hook = true
 filterwarnings = ["ignore::DeprecationWarning:.*:",
-                  "default::DeprecationWarning:{{ python_import_name }}.*:"]
-
-{% endif %}
-[build-system]
-requires = ["poetry>=0.12"]
-build-backend = "poetry.masonry.api"
+                  "default::DeprecationWarning:{{ python_source_path.replace('/', '.') }}.*:"]
+testpaths = ["tests"]
+{%- endif %}
