Set up automatic fixes for PRs using pre-commit-ci-lite

--- a/.github/workflows/ci.yml.jinja
+++ b/.github/workflows/ci.yml.jinja
@@ -70,11 +70,7 @@ jobs:
       - name: Check style
         if: always()
         run: |
-          hatch run style:fix
-      - name: Check formatting
-        if: always()
-        run: |
-          git diff --color --exit-code
+          hatch run style:check
       - name: Check types
         if: always()
         run: |
