--- a/.github/workflows/{% if mkdocs %}deploy-docs.yml{% endif %}.jinja
+++ b/.github/workflows/{% if mkdocs %}deploy-docs.yml{% endif %}.jinja
@@ -13,7 +13,7 @@ jobs:
       - name: Install Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.12'
+          python-version: '3.{{ python_minor_version - 1 }}'
       - name: Install dependencies
         run: pip install --no-deps -r requirements/requirements-docs.txt{% if mkdocs_install_self %} && pip install .{% endif %}
       - name: Build site
